# clean_mail_mvp

Desktop/CleanMail/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  LICENSE  README.md  check-deployment-ready.py  clean mail.md  main.py  pyproject.toml  requirements.txt  setup.py  start-dev.py
Desktop/CleanMail/backend/: README.md  requirements.txt
Desktop/CleanMail/backend/app/: __init__.py  config.py  database.py  main.py
Desktop/CleanMail/backend/app/models/: email_log.py  rule.py  user.py
Desktop/CleanMail/backend/app/routers/: auth.py  dashboard.py  emails.py  rules.py
Desktop/CleanMail/backend/app/schemas/: email_log.py  rule.py  user.py
Desktop/CleanMail/backend/app/services/: auth_service.py  gmail_service.py  rule_engine.py
Desktop/CleanMail/backend/scripts/: init_rules.py
Desktop/CleanMail/docs/: API_REFERENCE.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  USER_GUIDE.md
Desktop/CleanMail/frontend/: README.md  index.html  package-lock.json  package.json  vercel.json
Desktop/CleanMail/frontend/src/: App.jsx  index.css
Desktop/CleanMail/frontend/src/components/: Features.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  Navbar.jsx
Desktop/CleanMail/frontend/src/pages/: Dashboard.jsx  Landing.jsx  Login.jsx  Process.jsx  Rules.jsx
Desktop/CleanMail/frontend/src/services/: api.js
